Fix missing xkbcommon include on openSUSE
We include xkb_key_code_converter.h when compiling
ozone_platform_qt.cpp

Fixes: QTBUG-95473
Pick-to: 6.2
Change-Id: I45f8dbdd3bcd7934d376256ec08560a8327a8e70
Reviewed-by: Christophe Giboudeaux <christophe@krop.fr>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>

--- a/src/core/ozone/BUILD.gn
+++ b/src/core/ozone/BUILD.gn
@@ -2,6 +2,13 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 import("//ui/base/ui_features.gni")
+import("//build/config/linux/pkg_config.gni")
+
+if (use_xkbcommon) {
+  pkg_config("xkbcommon") {
+    packages = [ "xkbcommon" ]
+  }
+}
 
 source_set("qt") {
   sources = [
@@ -21,6 +28,7 @@ source_set("qt") {
   defines = [ "OZONE_IMPLEMENTATION" ]
 
   if (use_xkbcommon) {
+    configs += [ ":xkbcommon" ]
     libs = [ "xkbfile" ]
   }
 }
