Suppress console window for subprocess on windows
Fixes: QTBUG-95571
Pick-to: 6.2
Change-Id: If1a14f5cd5b9428e4c6265c5464b071fd8320562
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>

--- a/src/process/CMakeLists.txt
+++ b/src/process/CMakeLists.txt
@@ -16,6 +16,7 @@ qt_internal_add_executable(${qtWebEngineProcessName}
 if(WIN32)
    target_sources(${qtWebEngineProcessName} PRIVATE support_win.cpp)
    target_link_libraries(${qtWebEngineProcessName} PRIVATE WebEngineCoreSandbox)
+   set_property(TARGET ${qtWebEngineProcessName} PROPERTY WIN32_EXECUTABLE TRUE)
 endif()
 
 target_link_libraries(${qtWebEngineProcessName}
