Use rsp files directly from gn
Do not use gn created cmake files since this requires
cmake configuration step, which currently ends up
in duplicated targets in main and qtwebengine external
project. Use response files instead, so we can remove
duplicated targets in follow up patches. This approach
unfortunately has downside of cmake not being aware of
gn build artifacts and hacks directly linker command.

For universal builds remove not needed rsp template,
since we can now use rsp files directly generated by gn.

Task-number: QTBUG-95590
Change-Id: I83282ba68fa171cada7236d0587be27122315dec
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 96e47e1c9b6ce5c71e2560bb95f6e59ce062c8ba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>

--- a/src/pdf/configure/BUILD.root.gn.in
+++ b/src/pdf/configure/BUILD.root.gn.in
@@ -25,7 +25,7 @@ config("cpp17_config") {
 }
 
 shared_library("QtPdf") {
-  cmake_config = "@GN_CONFIG@"
+  rsp_types = [ "objects", "archives", "libs" ]
   configs += [
     ":cpp17_config",
     ":QtPdf_config"
