Add 'amazing' windows linker workaround for rsp files
This should be part of previous patch, however it deserved
separate commit message with explanation.

On windows cmake generates ninja rules with
cmake wrapper for linker in form of:

cmake.exe -E vs_link_dll

vs_link_dll internal command unfortunately expands all
rsp files passed to liker before calling it (it looks for '@')
and also swaps the order. This ends in bogus linker call.

Make a workaround based on:
https://github.com/Kitware/CMake/blob/master/Source/cmcmd.cxx#L2102

Use response files prefixed with 'CMakeFiles' so internal
command of cmake will skip the processing. Since
rsp files must now start with filename and not with filepath
we also need to copy them to directory where we call the
linker.

Task-number: QTBUG-95590
Pick-to: 6.2
Change-Id: I8e96ebf3a9ac7c7d751db6682ce37f38880be793
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -492,6 +492,7 @@ if(WIN32)
         add_custom_target(sandboxLibrary_${config}
             DEPENDS ${buildDir}/${config}/${arch}/QtWebEngineCoreSandbox.lib)
         add_dependencies(WebEngineCoreSandbox sandboxLibrary_${config})
+        add_dependencies(WebEngineCoreSandbox WebEngineCore)
     endforeach()
 endif()
 
